# SolarMcp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.bench.yaml  config.yaml
.github/workflows/: ci.yml
app/: main.cpp
build-ci/: solarmcpd
build-ci/Testing/Temporary/: CTestCostData.txt
build-ci/tests/: test_auth  test_buffer  test_shell_tool
build-release/tests/: test_codec  test_config  test_dispatcher  test_logger  test_plugin  test_reactor  test_read_file_tool  test_thread_pool  test_tool
docs/: system_design.md  多Reactor架构.md  待办事项.md  插件ABI.md  插件安全.md  插件热重载.md  时序图.mermaid  类图.mermaid  系统设计.md  配置管理.md
docs/benchmarks/: 2026-06-23-advanced-benchmark.json  2026-06-23-advanced-benchmark.md  2026-06-23-load-test-multi-reactor-release.json  2026-06-23-load-test-multi-reactor-release.md  2026-06-23-load-test-release.json  2026-06-23-load-test-release.md  2026-06-23-load-test.json  2026-06-23-load-test.md  README.md
include/mcp/common/: macros.h  noncopyable.h  types.h
include/mcp/config/: config_manager.h
include/mcp/logger/: async_logger.h  log_level.h  logger.h
include/mcp/network/: buffer.h  inet_address.h  socket.h  transport.h
include/mcp/plugin/: callback_tool.h  plugin_abi.h  plugin_manager.h
include/mcp/protocol/: codec.h  json_rpc_codec.h  message.h  request.h  response.h
include/mcp/reactor/: channel.h  epoll_poller.h  event_loop.h  event_loop_thread.h  event_loop_thread_pool.h  poller.h
include/mcp/server/: dispatcher.h  tcp_connection.h  tcp_server.h
include/mcp/thread/: thread_pool.h
include/mcp/timer/: timer_wheel.h
include/mcp/tool/: read_file_tool.h  tool.h  tool_manager.h
plugins/: CMakeLists.txt  README.md
plugins/example/: minimal.yaml  minimal_plugin.c  minimal_plugin.cpp
plugins/filesystem/: read_file_plugin.cpp
plugins/shell/: shell.yaml  shell_plugin.cpp  shell_tool.cpp  shell_tool.h
scripts/: benchmark_advanced.py  build.sh  client_test.py  load_test.py  mcp_tcp_client.py  reload_plugins.py
src/config/: config_manager.cpp
src/logger/: async_logger.cpp  logger.cpp
src/network/: buffer.cpp  inet_address.cpp  socket.cpp
src/plugin/: callback_tool.cpp  plugin_manager.cpp
src/protocol/: json_rpc_codec.cpp  request.cpp  response.cpp
src/reactor/: channel.cpp  epoll_poller.cpp  event_loop.cpp  event_loop_thread.cpp  event_loop_thread_pool.cpp  poller.cpp
src/server/: dispatcher.cpp  tcp_connection.cpp  tcp_server.cpp
src/thread/: thread_pool.cpp
src/timer/: timer_wheel.cpp
src/tool/: read_file_tool.cpp  tool_manager.cpp
tests/: CMakeLists.txt  test_auth.cpp  test_buffer.cpp  test_codec.cpp  test_config.cpp  test_dispatcher.cpp  test_logger.cpp  test_plugin.cpp  test_reactor.cpp  test_read_file_tool.cpp  test_shell_tool.cpp  test_thread_pool.cpp  test_tool.cpp
